# opa-keycloak-middleware

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yaml  index.yaml  opa-keycloak-middleware-0.1.0.tgz  opa-keycloak-middleware-0.1.1.tgz  opa-keycloak-middleware-0.1.2.tgz  opa-keycloak-middleware-0.1.3.tgz  opa-keycloak-middleware-0.1.4.tgz  opa-keycloak-middleware-0.1.5.tgz  opa_kecloak_middleware-0.1.0.tgz  opa_keycloak_middleware-0.1.0.tgz  pyproject.toml
.github/workflows/: build-docker.yaml  build-helm-release.yaml
app/: dependencies.py  main.py
app/schemas/: user.py
charts/opa-keycloak-middleware/: Chart.yaml  README.md  values.yaml
charts/opa-keycloak-middleware/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
charts/opa_kecloak_middleware/: Chart.yaml  README.md  values.yaml
charts/opa_kecloak_middleware/templates/: NOTES.txt  configmap.yaml  ingress.yaml
charts/opa_keycloak_middleware/: Chart.yaml  README.md
charts/opa_keycloak_middleware/templates/: hpa.yaml  secrets.yaml
charts/opa_keycloak_middleware/templates/tests/: test-connection.yaml
opa_keycloak_middleware/: main.py
opa_keycloak_middleware/routers/: user.py
scripts/: entrypoint.sh
tests/: test_main.py
