[tool.poetry]
name = "opa-keycloak-middleware"
version = "0.1.0"
description = ""
authors = ["Quan Nguyen <nguyennamquan1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-keycloak = "^4.7.1"
uvicorn = "^0.32.0"
structlog = "^24.4.0"
fastapi = {extras = ["standard"], version = "^0.115.5"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"